Bug 126964 - Dialog theming/UX - sidebar background looks ugly
Summary: Dialog theming/UX - sidebar background looks ugly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-16 08:23 UTC by Nicolas Christener
Modified: 2019-10-07 11:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the issues (318.09 KB, image/jpeg)
2019-08-16 08:25 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-08-16 08:23:21 UTC
Description:
The background color of the sidebar doesn't fit into the other color scheme on iOS and should be fixed (probably to #ffffff).

Please see the attached screenshot.

Steps to Reproduce:
1. Open the sidebar in the iOS app

Actual Results:
Some areas are white, others are grey - it looks unpolished.

Expected Results:
The sidebar should look polished and fit into the rest of the color scheme.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-08-16 08:25:52 UTC
Created attachment 153431 [details]
Printscreen showing the issues
Comment 2 How can I remove my account? 2019-08-20 13:18:41 UTC
Fix in https://gerrit.libreoffice.org/#/c/77823/
Comment 3 How can I remove my account? 2019-08-23 11:06:31 UTC
Fixed now in the branch the app in the App Store is built from, still pending for master.
Comment 4 How can I remove my account? 2019-08-30 09:57:43 UTC
Marking as resolved anyway as it is the app that counts, and it is built from collabora-online-4.
Comment 5 Commit Notification 2019-10-07 11:57:41 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6a822790d93f5fdbdf57ad6857c1663504bf37a

tdf#126964: Set background colours to white in IosSalFrame::UpdateSettings()

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.