tdf#126964: Set background colours to white in IosSalFrame::UpdateSettings()

Change-Id: I92110a7a501571d7fd707dc33502ff553f02ae5e
Reviewed-on: https://gerrit.libreoffice.org/77823
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>
(cherry picked from commit e84c42ee32d1a23729c65b534c4418e2043f706d)